syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.classserver;

import "ClassesDefinitions.proto";

// ClassServer -> ClassServer Service

//message PropagateStateRequest {
//  ClassState classState = 1;
//  map <string, int32> timestamp = 2;
//}

message PropagateStateRequest {
    repeated LogRecord logRecords = 1;
}

message PropagateStateResponse {
  ResponseCode code = 1;
}

service ClassServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
}
