syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.naming;

message ServerAddress {
  string host = 1;
  int32 port = 2;
}

message RegisterRequest {
  string ServiceName = 1;
  string host = 2;
  uint32 port = 3;
  // TODO: qualifiers
  repeated string qualifiers = 4;
}

message RegisterResponse {
}

message LookupRequest {
  string serviceName = 1;
  repeated string qualifiers = 2;
}

message LookupResponse {
  repeated ServerAddress servers = 1;
}

message DeleteRequest {
  string ServiceName = 1;
  string host = 2;
  uint32 port = 3;
}

message DeleteResponse {
}

service ClassNamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}
